chore: Add cadency_giga_f library
This adds the new cadency_giga_f binary package as generated by cargo.
Also, the cadency pacakge is modified to include a `default-run`
parameter in order to not change the default behaviour of a `cargo run`
executed in the workspace.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,10 @@ members = [
     "cadency_core",
     "cadency_codegen",
     "cadency_commands",
+    "cadency_giga_f",
     "cadency_yt_playlist",
     "cadency",
-    "examples/*"
+    "examples/*",
 ]
 
 [workspace.dependencies]
